--- a/test/fixtures/refugees.yml
+++ b/test/fixtures/refugees.yml
@@ -1,17 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  firstname: MyString
-  name: MyString
-  birthday: 2015-01-31
-  nationality: MyString
-  email: MyString
-  description: MyText
-
-two:
-  firstname: MyString
-  name: MyString
-  birthday: 2015-01-31
-  nationality: MyString
-  email: MyString
-  description: MyText
+# This model initially had no columns defined.  If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+#  column: value
